# gitbot-fleet

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .hypatia-baseline.json  .hypatia-ignore  0-AI-MANIFEST.a2ml  BOT-ENHANCEMENTS-2026-02-06.md  BOT-OPERATIONS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOGFOODING-ANALYSIS.md  ECOSYSTEM.scm  EXPLAINME.adoc  FLEET-DEPLOYMENT-STATUS.md  Justfile  NEW-PATTERNS-DEPLOYMENT-2026-02-06.md  OUTSTANDING-WORK.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  ROADMAP.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  about.html  compose.yml  contact.html  deploy-bot-fleet.k9.ncl  docker-compose.yml  docs.html  flake.nix  fleet-coordinator.sh  gallery.html  (+13 more)
bots/accessibilitybot/: Cargo.toml  README.adoc  ROADMAP.adoc  SONNET-TASKS.md
bots/accessibilitybot/src/: lib.rs  main.rs  scanner.rs
bots/accessibilitybot/tests/: integration_test.rs
bots/cipherbot/: Cargo.toml  README.adoc  ROADMAP.adoc  SONNET-TASKS.md
bots/cipherbot/policies/: crypto-hash-policy.ecl  crypto-pq-policy.ecl  crypto-protocol-policy.ecl
bots/cipherbot/src/: cli.rs  fleet.rs  lib.rs  main.rs  policy.rs  pq_readiness.rs  report.rs
bots/cipherbot/tests/: integration_test.rs
bots/echidnabot/: BRANDING.md  CANONICAL_SOURCE.md  CHANGELOG.adoc  CITATION.cff  Cargo.toml  Containerfile  PALIMPSEST.adoc  README.adoc  RELEASE_CHECKLIST.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  SESSION_SUMMARY_2026-01-29.md  SONNET-TASKS.md  TESTING-REPORT.adoc  TESTING-REPORT.scm  codemeta.json  echidnabot.example.toml  echidnabot.toml  flake.nix  guix.scm
bots/echidnabot/benches/: echidnabot_bench.rs
bots/echidnabot/config/: echidnabot.ncl
bots/echidnabot/contracts/: Token.sol  TokenEchidnaTest.sol
bots/echidnabot/docs/: CITATIONS.adoc  casket.toml
bots/echidnabot/echidna/: echidna-assertion.yaml  echidna-ci.yaml  echidna-config.yaml  echidna-no-flaky-assertion.yaml  echidna-no-flaky.yaml
bots/echidnabot/fuzz/: Cargo.toml
bots/echidnabot/hooks/: pre-commit-tsjs-blocker.sh  validate-codeql.sh  validate-spdx.sh
bots/echidnabot/scripts/: batch_driver.sh  echidna-gen.js
bots/echidnabot/src/: config.rs  error.rs  lib.rs  main.rs  result_formatter.rs
bots/echidnabot/tests/: integration_tests.rs  webhook_e2e_test.rs
bots/echidnabot/wiki/: Architecture.md  FAQ.md  Getting-Started.md  Home.md  Supported-Provers.md
bots/finishingbot/: Cargo.toml  Containerfile  README.adoc  ROADMAP.adoc  SONNET-TASKS.md  config.example.yml
bots/finishingbot/benches/: finishingbot_bench.rs
bots/finishingbot/fuzz/: Cargo.toml
bots/finishingbot/src/: config.rs  error.rs  fleet.rs  lib.rs  main.rs
bots/finishingbot/tests/: analyzer_tests.rs
bots/glambot/: Cargo.toml  README.adoc  ROADMAP.adoc  SONNET-TASKS.md
bots/glambot/benches/: glambot_bench.rs
bots/glambot/src/: error.rs  fleet.rs  lib.rs  main.rs
bots/glambot/tests/: integration.rs
bots/gsbot/: CHANGELOG.adoc  CLAUDE.md  Cargo.toml  Containerfile  Justfile  MAINTAINERS.md  README.adoc  ROADMAP.adoc  RSR.md  TPCF.md  alembic.ini  config.toml  docker-compose.yml  requirements.txt  setup.py
bots/gsbot/content/: _index.md
bots/gsbot/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
bots/gsbot/migrations/: 0001_init.sql
bots/gsbot/scripts/: backup_db.py  export_data.py  load_fixtures.py  quick_start.ps1  quick_start.sh
bots/gsbot/src/: bot.rs  cache.rs  config.rs  db.rs  domain.rs  fixtures.rs  lib.rs  logging.rs  main.rs  models.rs  services.rs  sustainability.rs
bots/gsbot/templates/: index.html  page.html  section.html
bots/gsbot/tests/: conftest.py  (+2 more)
bots/panicbot/: Cargo.toml
bots/rhodibot/: Cargo.toml  Justfile  README.adoc  ROADMAP.adoc  SONNET-TASKS.md
bots/seambot/: Cargo.toml  Containerfile  README.adoc  ROADMAP.adoc  SONNET-TASKS.md
bots/sustainabot/: ARCHITECTURE.md  Cargo.toml  DEPLOY.md  Justfile  QUICKSTART.md  README.adoc  README.hybrid.md  ROADMAP.adoc  test_sample.rs
dashboard/: Cargo.toml  Containerfile  Dockerfile  README.md  eclexiaiser.toml
dashboard/src/: groove.rs  main.rs
dashboard/static/: index.html
robot-repo-automaton/: .gitattributes  AI.a2ml  AI.djot  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  ERROR-CATALOG.scm  README.adoc  SONNET-TASKS.md  config.toml.example
robot-repo-automaton/.claude/: CLAUDE.md
robot-repo-automaton/.clusterfuzzlite/: Containerfile  project.yaml
robot-repo-automaton/.machine_readable/: AGENTIC.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm
robot-repo-automaton/contractiles/: README.adoc
robot-repo-automaton/docs/: CITATIONS.adoc
robot-repo-automaton/fuzz/: Cargo.toml
robot-repo-automaton/src/: catalog.rs  confidence.rs  config.rs  detector.rs  error.rs  exclusion_registry.rs  fixer.rs  fleet.rs  github.rs  hooks.rs  hypatia.rs  lib.rs  main.rs  registry_guard.rs  skeleton.rs
robot-repo-automaton/templates/: LICENSE.tmpl  SECURITY.tmpl  editorconfig.tmpl
robot-repo-automaton/tests/: catalog_tests.rs  detector_tests.rs  fixer_tests.rs
shared-context/: Cargo.toml  deployment-status.json  last-scan.json
shared-context/benches/: fleet_benchmarks.rs
shared-context/dispatch/: events.jsonl
shared-context/enrollment/: README.md
shared-context/findings/: README.md  hypatia-demo2-20260125.json.processed  hypatia-echidnabot-20260206-211633.json  hypatia-echidnabot-20260206-212939.json  hypatia-svalinn-20260125-081403.json.processed  security-audit-20260125.md
shared-context/fleet-cli/: Cargo.toml  Containerfile  Dockerfile
shared-context/learning/: ECHIDNA-VALIDATION-SUMMARY.md  RULE-PROPOSALS-2026-02-06.md  confidence-thresholds.json  fix-outcomes.jsonl  observed-patterns.jsonl  rule-deployment-status.json  triggers.jsonl
shared-context/src/: bot.rs  context.rs  exclusion_registry.rs  finding.rs  health.rs  lib.rs  panel.rs  panel_checker.rs  registry_guard.rs  reporting.rs  state.rs  storage.rs  triangle.rs
shared-context/tests/: context_tests.rs  e2e_fleet_coordination_test.rs  fleet_coordination_test.rs  property_tests.rs
(+1418 files in other folders)
