# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "fleet-dashboard"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "Web dashboard for gitbot-fleet monitoring and control"

[dependencies]
gitbot-shared-context = { path = "../shared-context" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[[bin]]
name = "fleet-dashboard"
path = "src/main.rs"
