# SPDX-License-Identifier: MPL-2.0

[package]
name = "fleet-dashboard"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Web dashboard for gitbot-fleet monitoring and control"

[dependencies]
gitbot-shared-context = { path = "../shared-context" }
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.51.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[[bin]]
name = "fleet-dashboard"
path = "src/main.rs"
