# SPDX-License-Identifier: MPL-2.0

[package]
name = "robot-repo-automaton"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Automated repository management executor - applies rules from hypatia"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/robot-repo-automaton"
homepage = "https://github.com/hyperpolymath/robot-repo-automaton"
keywords = ["github", "automation", "ci-cd", "repository", "compliance"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.adoc"

[lib]
name = "robot_repo_automaton"
path = "src/lib.rs"

[[bin]]
name = "robot-repo-automaton"
path = "src/main.rs"

[dependencies]
# Fleet coordination
gitbot-shared-context = { path = "../shared-context" }

# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Web framework (for webhook receiver)
axum = { version = "0.8.9", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "cors"] }

# HTTP client (for GitHub API)
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

# Git operations
# Using vendored-openssl to avoid system OpenSSL dependency (libssl-dev)
git2 = { version = "0.21.0", features = ["vendored-openssl"], default-features = false }
gix = { version = "0.84.0", features = ["blocking-http-transport-reqwest-rust-tls"] }

# S-expression parsing (for ERROR-CATALOG.scm)
lexpr = "0.2.7"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Path handling
glob = "0.3.3"
walkdir = "2.5.0"
regex = "1.12.3"
dirs = "6.0.0"

# Async utilities
futures = "0.3.32"

# Time
chrono = { version = "0.4.45", features = ["serde"] }

# UUID
uuid = { version = "1.23.2", features = ["v4", "serde"] }

# Secrets
secrecy = { version = "0.10.3", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio-test = "0.4.5"
wiremock = "0.6.5"

[features]
default = []
webhook = []  # Enable webhook server mode
