# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "gitbot-shared-context"
version = "0.1.0"
edition = "2024"
authors = ["Hyperpolymath <dev@hyperpolymath.org>"]
description = "Shared context layer for gitbot-fleet coordination"
license = "PMPL-1.0"
repository = "https://github.com/hyperpolymath/gitbot-fleet"
keywords = ["gitbot-fleet", "coordination", "context", "ci-cd"]
categories = ["development-tools"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lexpr = "0.2"  # S-expression support for .scm files

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["sync", "fs"] }

# File watching (for context updates)
notify = "7"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "gitbot_shared_context"
path = "src/lib.rs"

[[bench]]
name = "fleet_benchmarks"
harness = false
