# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "accessibilitybot"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "WCAG 2.3 AAA Accessibility Compliance Bot for gitbot-fleet"
repository = "https://github.com/hyperpolymath/accessibilitybot"
keywords = ["accessibility", "wcag", "aria", "gitbot-fleet"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
regex = "1"
scraper = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "accessibilitybot"
path = "src/main.rs"
