# SPDX-License-Identifier: MPL-2.0
[package]
name = "accessibilitybot"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "WCAG 2.3 AAA Accessibility Compliance Bot for gitbot-fleet"
repository = "https://github.com/hyperpolymath/accessibilitybot"
keywords = ["accessibility", "wcag", "aria", "gitbot-fleet"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
regex = "1.12.3"
scraper = "0.27.0"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "accessibilitybot"
path = "src/main.rs"
