# SPDX-License-Identifier: MPL-2.0
[package]
name = "cipherbot"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Cryptographic Hygiene & Post-Quantum Readiness Bot for gitbot-fleet"
repository = "https://github.com/hyperpolymath/cipherbot"
keywords = ["cryptography", "post-quantum", "security", "gitbot-fleet"]
categories = ["development-tools"]

[[bin]]
name = "cipherbot"
path = "src/main.rs"

[dependencies]
# Fleet integration
gitbot-shared-context = { path = "../../shared-context" }

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2+spec-1.1.0"

# Error handling
anyhow = "1.0.102"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# File traversal
walkdir = "2.5.0"

# Pattern matching
regex = "1.12.3"

# AST parsing (optional, for future deep analysis)
# tree-sitter = "0.24"
# tree-sitter-rust = "0.23"
# tree-sitter-javascript = "0.23"

[dev-dependencies]
tempfile = "3.27.0"
