# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "finishing-bot"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "Release readiness validation bot - ensures repositories are production-ready"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/finishing-bot"
keywords = ["release", "validation", "ci-cd", "compliance", "gitbot-fleet"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# File operations
walkdir = "2"
globset = "0.4"
glob = "0.3"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Git operations
git2 = "0.19"

# HTTP client (for license verification)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# Hash verification
sha2 = "0.10"
hex = "0.4"

# Markdown parsing (for claim verification)
pulldown-cmark = "0.12"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Fleet integration (optional)
gitbot-shared-context = { path = "../gitbot-fleet/shared-context", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }

[features]
default = []
fleet = ["gitbot-shared-context", "uuid"]

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "finishingbot_bench"
harness = false

[[bin]]
name = "finishing-bot"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
