# SPDX-License-Identifier: MPL-2.0
[package]
name = "finishing-bot"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Release readiness validation bot - ensures repositories are production-ready"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/finishing-bot"
keywords = ["release", "validation", "ci-cd", "compliance", "gitbot-fleet"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34+deprecated"
toml = "1.1.2+spec-1.1.0"

# File operations
walkdir = "2.5.0"
globset = "0.4.18"
glob = "0.3.3"
regex = "1.12.3"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"

# Git operations
git2 = "0.21.0"

# HTTP client (for license verification)
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Hash verification
sha2 = "0.11.0"
hex = "0.4.3"

# Markdown parsing (for claim verification)
pulldown-cmark = "0.13.4"

# Date/time
chrono = { version = "0.4.44", features = ["serde"] }

# Fleet integration (optional)
gitbot-shared-context = { path = "../../shared-context", optional = true }
uuid = { version = "1.23.2", features = ["v4", "serde"], optional = true }

[features]
default = []
fleet = ["gitbot-shared-context", "uuid"]

[dev-dependencies]
tempfile = "3.27.0"
assert_fs = "1.1.4"
predicates = "3.1.4"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "finishingbot_bench"
harness = false

[[bin]]
name = "finishing-bot"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
