# SPDX-License-Identifier: MPL-2.0
[package]
name = "glambot"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Presentation quality enforcer - ensures visual polish, accessibility, and machine-readability"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/glambot"
keywords = ["presentation", "accessibility", "seo", "wcag", "gitbot-fleet"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34+deprecated"
toml = "1.1.2+spec-1.1.0"

# File operations
walkdir = "2.5.0"
globset = "0.4.18"
glob = "0.3.3"
regex = "1.12.3"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Markdown parsing
pulldown-cmark = "0.13.4"
comrak = "0.52.0"

# HTML parsing (for accessibility checks)
scraper = "0.27.0"
html5ever = "0.39.0"

# Image metadata (for alt-text validation)
image = "0.25.10"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Directories
dirs = "6.0.0"

# URL validation
url = "2.5.8"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }

# Fleet integration (optional)
gitbot-shared-context = { path = "../../shared-context", optional = true }
uuid = { version = "1.23.2", features = ["v4", "serde"], optional = true }

[features]
default = []
fleet = ["gitbot-shared-context", "uuid"]

[dev-dependencies]
tempfile = "3.27.0"
assert_fs = "1.1.4"
predicates = "3.1.4"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bin]]
name = "glambot"
path = "src/main.rs"

[[bench]]
name = "glambot_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
