# SPDX-License-Identifier: MPL-2.0
[package]
name = "panicbot"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Targeted audit bot wrapping panic-attack static analysis for gitbot-fleet"
repository = "https://github.com/hyperpolymath/gitbot-fleet"
keywords = ["static-analysis", "security", "audit", "gitbot-fleet"]
categories = ["development-tools"]

[[bin]]
name = "panicbot"
path = "src/main.rs"

[dependencies]
# Fleet integration
gitbot-shared-context = { path = "../../shared-context" }

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2+spec-1.1.0"

# Error handling
anyhow = "1.0.102"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Unique IDs
uuid = { version = "1.23.1", features = ["v4"] }

# Date/time
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27.0"
