# SPDX-License-Identifier: MPL-2.0

[package]
name = "rhodibot"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "RSR compliance bot for repository management and standard enforcement"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/rhodibot"
homepage = "https://github.com/hyperpolymath/rhodibot"
keywords = ["github", "bot", "rsr", "compliance", "automation"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Web framework
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2+spec-1.1.0"

# Crypto for webhook verification
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15.7"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Git operations
gix = { version = "0.84.0", default-features = false, features = ["blocking-network-client", "sha1"] }

# Time
chrono = { version = "0.4.45", features = ["serde"] }

# Template rendering (for reports/issues)
minijinja = "2.20.0"

# Fleet integration
gitbot-shared-context = { path = "../../shared-context" }

[dev-dependencies]
tokio-test = "0.4.5"
wiremock = "0.6.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
