# SPDX-License-Identifier: MPL-2.0

[package]
name = "seambot"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Seam hygiene auditor - tracks, enforces, and detects drift in architectural boundaries"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/seambot"
homepage = "https://github.com/hyperpolymath/seambot"
keywords = ["architecture", "seams", "boundaries", "audit", "ci"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
# CLI framework
clap = { version = "4.6.1", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2+spec-1.1.0"

# File processing
walkdir = "2.5.0"
glob = "0.3.3"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Async runtime (for future integrations)
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs"] }
async-trait = "0.1.89"

# HTTP client (for webhook/CI integration)
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2.1.3"

# Hashing for drift detection
sha2 = "0.11.0"
hex = "0.4.3"

# Time
chrono = { version = "0.4.44", features = ["serde"] }

# Template rendering for reports
minijinja = "2.20.0"

# Regex for pattern matching
regex = "1.12.3"

# JWT for GitHub App authentication
jsonwebtoken = "10.4.0"

# RSA key handling for GitHub App
rsa = { version = "0.9.10", features = ["pem"] }

# HMAC-SHA256 for webhook signature verification
hmac-sha256 = "1.1.14"

# Fleet integration
gitbot-shared-context = { path = "../../shared-context" }

# AsciiDoc parsing (basic)
# Note: Full AsciiDoc parsing would need asciidoctor via subprocess

[dev-dependencies]
tempfile = "3.27.0"
assert_fs = "1.1.3"
predicates = "3.1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "seambot"
path = "src/main.rs"
