# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[workspace]
resolver = "2"
members = [
    "crates/sustainabot-cli",
    "crates/sustainabot-analysis",
    "crates/sustainabot-metrics",
    "crates/sustainabot-sarif",
    "crates/sustainabot-eclexia",
    "crates/sustainabot-fleet",
]

[workspace.package]
version = "0.1.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/sustainabot"

[workspace.dependencies]
# AST parsing
tree-sitter = "0.23.2"
tree-sitter-rust = "0.23.3"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"

# CLI
clap = { version = "4.5.55", features = ["derive", "cargo"] }
anyhow = "1.0.100"
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Process execution (for Eclexia interpreter)
tokio = { version = "1.49.0", features = ["full"] }

# Carbon APIs
reqwest = { version = "0.12.28", features = ["json"] }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
