[package]
name = "fleet"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Unified CLI for gitbot-fleet coordination"

[dependencies]
gitbot-shared-context = { path = ".." }
clap = { version = "4.6.0", features = ["derive", "cargo"] }
tokio = { version = "1.51.0", features = ["full"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
colored = "2.2.0"
