# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "finishingbot-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.finishingbot]
path = ".."

[[bin]]
name = "fuzz_config_parsing"
path = "fuzz_targets/fuzz_config_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_analyzer"
path = "fuzz_targets/fuzz_analyzer.rs"
test = false
doc = false
