# SPDX-License-Identifier: PMPL-1.0
[package]
name = "rhodibot-fuzz"
version = "0.0.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.rhodibot]
path = ".."

[[bin]]
name = "fuzz_input"
path = "fuzz_targets/fuzz_input.rs"
test = false
doc = false
bench = false
