# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "sustainabot-eclexia"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Eclexia policy engine integration for sustainabot"

[features]
default = []
eclexia-native = [
    "dep:eclexia-lexer",
    "dep:eclexia-parser",
    "dep:eclexia-interp",
]

[dependencies]
sustainabot-metrics = { path = "../sustainabot-metrics" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Optional native eclexia integration
eclexia-lexer = { path = "../../../eclexia/compiler/eclexia-lexer", optional = true }
eclexia-parser = { path = "../../../eclexia/compiler/eclexia-parser", optional = true }
eclexia-interp = { path = "../../../eclexia/compiler/eclexia-interp", optional = true }
