# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "sustainabot-sarif"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SARIF 2.1.0 output for sustainabot analysis results"

[dependencies]
sustainabot-metrics = { path = "../sustainabot-metrics" }
serde.workspace = true
serde_json.workspace = true
